feat: unified Dockerfile, CPU mode, one-liner setup, docker-compose fix
- Merge Dockerfile.patch fixes into main Dockerfile (openfold, openmm, numpy, dgl, e3nn)
- Add DEVICE env var: auto/cuda/cpu with auto-detection in entrypoint
- docker-compose: remove hardcoded GPU device_ids, add cpu profile
- Add setup.sh one-liner install script (curl | bash)
- Add CPU vs GPU comparison table in README
- Fix pyproject.toml URLs and description
- Remove attestation step from CI (was failing)

--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -71,10 +71,5 @@ jobs:
           cache-from: type=gha
           cache-to: type=gha,mode=max
           platforms: linux/amd64
-
-      - name: Generate artifact attestation
-        uses: actions/attest-build-provenance@v1
-        with:
-          subject-name: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
-          subject-digest: ${{ steps.build-and-push.outputs.digest }}
-          push-to-registry: true
+          build-args: |
+            BUILDKIT_INLINE_CACHE=1
