feat: CPU mode, Dockerfile.lite, Modal deploy, Smithery, PyPI optional deps, lazy weights
- server.py: DEVICE env var detection, filter GPU-only tools in CPU mode
- Dockerfile.lite: ~3-5GB CPU-only image (no CUDA/RFdiffusion)
- deploy/modal_app.py: serverless GPU on Modal (A10G, pay-per-use)
- modal_proxy.py: local MCP proxy that forwards tool calls to Modal
- smithery.yaml: Smithery.ai one-click install
- pyproject.toml: torch/fair-esm moved to optional [gpu] deps
- rfdiffusion.py/proteinmpnn.py: lazy weight download on first use
- entrypoint.sh: default SKIP_MODEL_DOWNLOAD=true

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -66,6 +66,30 @@ services:
       - DEVICE=cpu
       - LOG_LEVEL=${LOG_LEVEL:-INFO}
 
+  # --- Lite CPU-only image (smaller, no CUDA) ---
+  protein-design-lite:
+    image: ghcr.io/jasonkim8652/protein-design-mcp:lite
+    build:
+      context: .
+      dockerfile: Dockerfile.lite
+    profiles:
+      - lite
+
+    # No GPU reservation
+    volumes:
+      - ./models:/models
+      - ./data:/data
+      - ./cache:/cache
+
+    stdin_open: true
+    tty: true
+
+    environment:
+      - MODELS_DIR=/models
+      - CACHE_DIR=/cache
+      - DEVICE=cpu
+      - LOG_LEVEL=${LOG_LEVEL:-INFO}
+
   # --- Download models only ---
   download-models:
     image: ghcr.io/jasonkim8652/protein-design-mcp:latest
