--- a/pyproject.toml
+++ b/pyproject.toml
@@ -35,14 +35,16 @@ dependencies = [
     "mcp>=0.1.0",
     "numpy>=1.24",
     "biopython>=1.81",
-    "torch>=2.0",
-    "fair-esm>=2.0.0",
     "aiofiles>=23.0",
     "pyyaml>=6.0",
     "tqdm>=4.65",
 ]
 
 [project.optional-dependencies]
+gpu = [
+    "torch>=2.0",
+    "fair-esm>=2.0.0",
+]
 dev = [
     "pytest>=7.0",
     "pytest-cov>=4.0",
@@ -54,6 +56,7 @@ dev = [
 
 [project.scripts]
 protein-design-mcp = "protein_design_mcp:main"
+protein-design-mcp-modal = "protein_design_mcp.modal_proxy:main"
 
 [project.urls]
 Homepage = "https://github.com/jasonkim8652/protein-design-mcp"
