--- a/pyproject.toml
+++ b/pyproject.toml
@@ -56,6 +56,7 @@ dev = [
 
 [project.scripts]
 protein-design-mcp = "protein_design_mcp:main"
+protein-design-mcp-setup = "protein_design_mcp.setup_cli:main"
 protein-design-mcp-modal = "protein_design_mcp.modal_proxy:main"
 
 [project.urls]
